social icon spacing fix

--- a/css/main1.css
+++ b/css/main1.css
@@ -212,7 +212,7 @@ SIDE NAV
 
 .slide-nav-social a {
   width:20px;
-  padding:slide 5px 15px 0 0;
+  padding: 5px 15px 0 0;
   display: inline-block;
 }
 
